added continents buttons to pages

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -48,13 +48,27 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Continents
                         <span class="caret"></span></button>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Asia</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Africa</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">North America</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">South America</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Antartica</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Europe</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Australia</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1"
+                            <a href="http://127.0.0.1:5000/asia" >
+                                <button type="button" class="btn btn-info">Asia</button>
+                        <li role="presentation"><a role="menuitem" tabindex="-1"
+                            <a href="http://127.0.0.1:5000/africa" >
+                                <button type="button" class="btn btn-info">Africa</button>
+                        <li role="presentation"><a role="menuitem" tabindex="-1"
+                            <a href="http://127.0.0.1:5000/northamerica" >
+                                <button type="button" class="btn btn-info">North America</button>
+                        <li role="presentation"><a role="menuitem" tabindex="-1"
+                            <a href="http://127.0.0.1:5000/southamerica" >
+                                <button type="button" class="btn btn-info">South America</button>
+                        <li role="presentation"><a role="menuitem" tabindex="-1"
+                            <a href="http://127.0.0.1:5000/antartica" >
+                                <button type="button" class="btn btn-info">Antartica</button>
+                        <li role="presentation"><a role="menuitem" tabindex="-1"
+                            <a href="http://127.0.0.1:5000/europe" >
+                                <button type="button" class="btn btn-info">Europe</button>
+                        <li role="presentation"><a role="menuitem" tabindex="-1"
+                            <a href="http://127.0.0.1:5000/australia" >
+                                <button type="button" class="btn btn-info">Australia</button>
                        </ul>
                 </body>
                 </html>
