Text Over Image (change 2)

--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -42,22 +42,22 @@
 </table>
     <style>/* Parent Container */
     .content_img{
-        position: relative;
+        position: auto;
         width: 200px;
-        height: 200px;
+        height: 220px;
         float: left;
         margin-right: 10px;
     }
 
     /* Child Text Container */
     .content_img div{
-        position: absolute;
+        position: middle;
         bottom: 0;
         right: 0;
         background: black;
         color: white;
         margin-bottom: 5px;
-        font-family: sans-serif;
+        font-family: "Comic Sans MS";
         opacity: 0;
         visibility: hidden;
         -webkit-transition: visibility 0s, opacity 0.5s linear;
