australia fix/ africa page

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -51,24 +51,31 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                         <li role="presentation"><a role="menuitem" tabindex="-1"
                             <a href="http://127.0.0.1:5000/asia" >
                                 <button type="button" class="btn btn-info">Asia</button>
+                            </a>
                         <li role="presentation"><a role="menuitem" tabindex="-1"
                             <a href="http://127.0.0.1:5000/africa" >
                                 <button type="button" class="btn btn-info">Africa</button>
+                            </a>
                         <li role="presentation"><a role="menuitem" tabindex="-1"
                             <a href="http://127.0.0.1:5000/northamerica" >
                                 <button type="button" class="btn btn-info">North America</button>
+                            </a>
                         <li role="presentation"><a role="menuitem" tabindex="-1"
                             <a href="http://127.0.0.1:5000/southamerica" >
                                 <button type="button" class="btn btn-info">South America</button>
+                            </a>
                         <li role="presentation"><a role="menuitem" tabindex="-1"
                             <a href="http://127.0.0.1:5000/antartica" >
                                 <button type="button" class="btn btn-info">Antartica</button>
+                            </a>
                         <li role="presentation"><a role="menuitem" tabindex="-1"
                             <a href="http://127.0.0.1:5000/europe" >
                                 <button type="button" class="btn btn-info">Europe</button>
+                            </a>
                         <li role="presentation"><a role="menuitem" tabindex="-1"
-                            <a href="http://127.0.0.1:5000/australia" >
+                            <a href="http://127.0.0.1:5000/europe" >
                                 <button type="button" class="btn btn-info">Australia</button>
+                            </a>
                        </ul>
                 </body>
                 </html>
