--- a/templates/africa.html
+++ b/templates/africa.html
@@ -1,10 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
+<!-- Extending the project layout, as this file will do minor customizations -->
+{% extends "layouts/project.html" %}
 
-</body>
-</html>
+<!-- Setting up variables to customize "project" details to be specific to kangaroos -->
+{% set project = "Africa" %}
+
+{% block body %}
+
+    <html>
+    <head>
+        <style>
+            body {
+                background-image: url("https://i2-prod.mirror.co.uk/incoming/article17477723.ece/ALTERNATES/s1200b/0_Elephant-walking-at-sunset-in-the-Okavango-Delta.jpg");
+            }
+
+            h1 {
+                color: white;
+                text-align: center;
+                font-size: xxx-large;
+            }
+
+
+        </style>
+    </head>
+    <body>
+
+    <h1>Africa</h1>
+
+    </body>
+    </html>
+
+
+{% endblock %}
+<!-- Setting up a block replacement to customize background to RINGS -->
+{% block background %}
+
+{% endblock %}
