--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -15,43 +15,43 @@
     <tr>
         <div class="content_img">
             <img src='/static/Screen%20Shot%202021-09-10%20at%205.55.55%20PM.png' width='150%' height='200%' style="margin: 0% 0% 0%">
-            <div>Brian Zhang: 15 years old and allergic to cats </div>
+            <div>Brian Zhang:<br>15 years old<br>Allergic to cats </div>
         </div>
     </tr>
     </thead>
     <tbody>
     <tr>
         <div class="content_img">
-            <img src='/static/picur.png' width='150%' height='200%' style="margin: 0% 55% 0%">
-            <div>Nathan Manangan: 15 years old and allergic to seafood </div>
+            <img src='/static/picur.png' width='150%' height='200%' style="margin: 0% 0% 0%">
+            <div>Nathan Manangan:<br>15 years old<br>Allergic to seafood </div>
         </div>
     </tr>
     <tr>
         <div class="content_img">
-            <img src='/static/Screen%20Shot%202021-09-10%20at%205.53.48%20PM.png' width='150%' height='200%' style="margin: 0% 110% 0%">
-            <div>Derrick Huang: 15 years old and likes to swim </div>
+            <img src='/static/Screen%20Shot%202021-09-10%20at%205.53.48%20PM.png' width='150%' height='200%' style="margin: 0% 0% 0%">
+            <div>Derrick Huang:<br>15 years old<br>Likes to swim </div>
         </div>
     </tr>
     <tr>
         <div class="content_img">
-            <img src='/static/Screen%20Shot%202021-09-10%20at%206.07.07%20PM.png' width='150%' height='200%' style="margin: 0% 165% 0%">
-            <div>Reinhardt Lotter: 15 years old and has been a gymnast for 12 years</div>
+            <img src='/static/Screen%20Shot%202021-09-10%20at%206.07.07%20PM.png' width='150%' height='200%' style="margin: 0% 0% 0%">
+            <div>Reinhardt Lotter:<br>15 years old<br>Gymnast for 12 years</div>
         </div>
     </tr>
     </tbody>
 </table>
     <style>/* Parent Container */
     .content_img{
-        position: auto;
+        position: static;
         width: 200px;
         height: 220px;
         float: left;
-        margin-right: 10px;
+        margin-right: 115px;
     }
 
     /* Child Text Container */
     .content_img div{
-        position: middle;
+        position: bottom;
         bottom: 0;
         right: 0;
         background: black;
@@ -70,7 +70,7 @@
     }
 
     .content_img:hover div{
-        width: 150px;
+        width: 200px;
         padding: 8px 15px;
         visibility: visible;
         opacity: 0.7;
