--- a/templates/wireframes.html
+++ b/templates/wireframes.html
@@ -8,7 +8,7 @@
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
 <div class="col-0" style="margin: 3% 5% 5%" name="imgbox" id="imgbox;>
-    <iframe width="1920" height="1080">
+    <iframe width="1920" height="1180">
     </iframe><br />
     <div class="container">
         <div class="row">
@@ -19,15 +19,29 @@
                 <img src="/static/Wireframe%20(1).png" target="imgbox" width="700" height="380" style= "float:right"></a>
             </div>
         </div>
+    <div class="container">
+        <div class="row">
+            <p>
+
+
+
+            </p>
+        </div>
+    </div>
+    </div>
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <img src="/static/Wireframe.png" target="imgbox" width="100%" height="100%" style="margin:0% -3% 0%"></a>
+                    <img src="/static/Wireframe.png" target="imgbox" width="100%" height="100%"></a>
                 </div>
                 <div class="col">
-                    <img src="/static/image.png" target="imgbox" width="100%" height="100%" style= "margin:0% 3% 0%"></a>
+                    <img src="/static/image.png" target="imgbox" width="100%" height="100%"></a>
                 </div>
             </div>
 
+        </div>
+    <br>
+    <br>
+    </div>
 
-    {% endblock %}
+{% endblock %}
