--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -4,7 +4,8 @@
 
 <!- This variable sets name of browser tab  -->
 {% set project = "About Us" %}
-
+<!DOCTYPE HTML>
+<html lang="en">
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
 <div class="col-0" style="margin: 3% 5% 2%" name="imgbox" id="imgbox;>
@@ -75,4 +76,7 @@
         visibility: visible;
         opacity: 0.7;
     }</style>
+
+</html>
+
 {% endblock %}
