--- a/templates/index.html
+++ b/templates/index.html
@@ -5,3 +5,13 @@
 {% set project = "The Hackermen" %}
 {% set overview = "https://github.com/Reinhardtlotter/flask_portfolio" %}
 
+{% block background %}
+
+
+
+<style>
+    body {
+        background-image: url('https://img.wallpapersafari.com/desktop/1920/1080/7/36/uOV7Nd.gif ');
+    }
+</style>
+{% endblock %}
