--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -155,7 +155,23 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 </body>
 
 {% block background %}
-<body style="background-color:deepskyblue;">
-</body>
+<style>
+    body {
+        background-color: deepskyblue;
+    }
+</style>
+<script>
+    VANTA.BIRDS({
+        el: "body",
+        mouseControls: true,
+        touchControls: true,
+        gyroControls: false,
+        minHeight: 200.00,
+        minWidth: 200.00,
+        scale: 1.00,
+        scaleMobile: 1.00
+    })
+</script>
 {% endblock %}
+
 </html>
