--- a/templates/antarctica.html
+++ b/templates/antarctica.html
@@ -2,7 +2,7 @@
 {% extends "layouts/project.html" %}
 
 <!-- Setting up variables to customize "project" details to be specific to kangaroos -->
-{% set project = "SouthAmerica" %}
+{% set project = "NorthAmerica" %}
 
 {% block body %}
 
@@ -10,7 +10,7 @@
     <head>
         <style>
             body {
-                background-image: url("https://d3ertfc829vzop.cloudfront.net/-/media/Tauck/Collection/Hero-Images/Collection_SouthAmerica_banner.jpg?h=817&w=1400&rev=24746987331f4756821dcc2472f7de29&hash=3561AAE60BFBBB080955BFAE08C3EDCA");
+                background-image: url("https://media.cntraveler.com/photos/58a5d89287666e798dbdb573/master/pass/antarctica-scotia-sea-chinstrap-penguins-GettyImages-126249208.jpg");
             }
 
             h1 {
@@ -24,7 +24,7 @@
     </head>
     <body>
 
-    <h1>South America</h1>
+    <h1>Antarctica</h1>
 
     </body>
     </html>
