--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -65,15 +65,15 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                                 <button type="button" class="btn btn-info">South America</button>
                             </a>
                         <li role="presentation"><a role="menuitem" tabindex="-1"
-                            <a href="http://127.0.0.1:5000/antartica" >
-                                <button type="button" class="btn btn-info">Antartica</button>
+                            <a href="http://127.0.0.1:5000/antarctica" >
+                                <button type="button" class="btn btn-info">Antarctica</button>
                             </a>
                         <li role="presentation"><a role="menuitem" tabindex="-1"
                             <a href="http://127.0.0.1:5000/europe" >
                                 <button type="button" class="btn btn-info">Europe</button>
                             </a>
                         <li role="presentation"><a role="menuitem" tabindex="-1"
-                            <a href="http://127.0.0.1:5000/europe" >
+                            <a href="http://127.0.0.1:5000/australia" >
                                 <button type="button" class="btn btn-info">Australia</button>
                             </a>
                        </ul>
