Added in the 4x4 gridbox (the lines for the box aren't showing up) Changed the backround color for the mini labs page Added in about me plus my image

--- a/templates/sreeja.html
+++ b/templates/sreeja.html
@@ -8,7 +8,14 @@
         <title>Title</title>
     </head>
     <body>
+    <div class="w3-container w3-sand">
+        <h2>a little about me</h2>
+        <p>hello! I'm Sreeja and I am a junior! I was born June 15, 2005 and have lived in San Diego my whole life. I have an older brother who is 25 and a dog named Bandit who is 3. When I'm not hanging out with my friends, I'm taking pictures, playing volleyball, painting, or reading.  My favorite book has to be "The Book Theif" by Markus Zusac and "Carrie" by Stephan King. I love to spend time at home alone with my dog to just relax and unwind after a long day.I have no prior experience coding, however, I find it super cool! This is a picture of me with my cousin, I am on the left!</p>
 
+    </div>
+    <img src="../static/assets/SreejaPic.jpg" height="1094" width="828"/>
+
+    </body>
     </body>
 {% endblock %}
 
