added modules.py,data.py, and more to the easy page. The game is basically funcional it just needs a timer of some sort and some way to save the data on the page instead of trying to redirect you elsewhere.

--- a/templates/game.html
+++ b/templates/game.html
@@ -34,6 +34,7 @@
 
 
     <style>
+
         .button {
             background-color: rosybrown; /* Green */
             border: none;
@@ -57,9 +58,9 @@
         }
 
     </style>
-    <a class="button button1" href="/templates/game/easy">Easy (25 sec)</a>
-    <a class="button button2" href="/templates/game/medium">Medium (15 sec)</a>
-    <a class="button button3" href="/templates/game/hard">Hard (8 sec)</a>
+    <a class="button button1" href="/game/easy">Easy (25 sec)</a>
+    <a class="button button2" href="/game/medium">Medium (15 sec)</a>
+    <a class="button button3" href="/game/hard">Hard (8 sec)</a>
 
         <div id="timer">
             <span id="hours">00:</span>
