fix individual pages

--- a/templates/about.html
+++ b/templates/about.html
@@ -23,10 +23,11 @@
                 font-size: 20px;
             }
         </style>
+
     </head>
 
     <h1>About Us</h1>
-    <p/> We are a group of high school students from Del Norte high school who have a passion for coding and designing websites.<p/>
+    <p></p> We are a group of high school students from Del Norte high school who have a passion for coding and designing websites.<p/>
 
     <br />
 
@@ -46,10 +47,10 @@
             </div>
         </div>
         </div>
-    </div>
+
 
 {% endblock %}
 
-{% block background %}
+{% block background %}</html>
 
 {% endblock %}
