--- a/templates/kashish.html
+++ b/templates/kashish.html
@@ -23,9 +23,39 @@
     <div class="col-12">
         <img src="/static/assets/PythonFlask.jpeg" style="height: 400px" >
     </div>
+
+    <html>
+    <head>
+        <style>
+            body {
+                background-color: mediumpurple;
+            }
+
+            h1 {
+                color: black;
+                text-align: center;
+            }
+
+        </style>
+
+    </head>
+
+    <h1>Kashish</h1>
+    <br />
+
+    <div class="container">
+    <div class="row">
+    <div class="col-sm-2">
+        <img src="/static/assets/kashish.png" alt="Kashish's picture" style="width: 200px; height: 200px;">
+        <p style="text-align: center;"> Kashish Chopra </p>
+
+
+
 {% endblock %}
 
 
 <!- This is turning off birds background from base.html -->
 {% block background %}
 {% endblock %}
+
+
