--- a/templates/sonakshi.html
+++ b/templates/sonakshi.html
@@ -23,6 +23,38 @@
         <div class="col-12">
             <img src="/static/assets/PythonFlask.jpeg" style="height: 400px" >
         </div>
+
+    <html>
+    <head>
+        <style>
+            body {
+                background-color: palevioletred;
+            }
+
+            h1 {
+                color: black;
+                text-align: center;
+            }
+
+        </style>
+
+    </head>
+
+    <h1>Sonakshi</h1>
+    <br />
+
+    <div class="container">
+    <div class="row">
+    <div class="col-sm-2">
+        <img src="/static/assets/sonakshi.png" alt="Sonakshi's picture" style="width: 200px; height: 200px;">
+        <p style="text-align: center;"> Sonakshi Bhalla </p>
+    </div>
+    <div class="col-sm-2">
+        <img src="/static/assets/tennis.png" alt="Tennis Ball" style="width: 200px; height: 200px;">
+        <p style="text-align: center;"> Sonakshi's Hobbies </p>
+
+
+
 {% endblock %}
 
 
