--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -12,7 +12,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('home') }}>Home</a>
             <a class="nav-link" href={{ url_for('binary') }}>Binary</a>
             <a class="nav-link" href={{ url_for('about') }}>About</a>
-            <a class="nav-link" href={{ url_for('concepts') }}>Concepts</a>
+            <a class="nav-link" href={{ url_for('insights') }}>Insights</a>
             <a class="nav-link" href="/stub">Stub</a>
 
 
