--- a/templates/saumya.html
+++ b/templates/saumya.html
@@ -23,6 +23,35 @@
     <div class="col-12">
         <img src="/static/assets/PythonFlask.jpeg" style="height: 400px" >
     </div>
+
+    <html>
+    <head>
+        <style>
+            body {
+                background-color: dodgerblue;
+            }
+
+            h1 {
+                color: black;
+                text-align: center;
+            }
+
+        </style>
+
+    </head>
+
+    <h1>Saumya</h1>
+    <br />
+
+    <div class="container">
+    <div class="row">
+    <div class="col-sm-2">
+        <img src="/static/assets/saumya.png" alt="Saumya's picture" style="width: 200px; height: 200px;">
+        <p style="text-align: center;"> Sonakshi Bhalla </p>
+
+
+
+
 {% endblock %}
 
 
