--- a/templates/binary.html
+++ b/templates/binary.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-
+{% extends "layouts/base.html" %}
 
 <!-- Search for all the Hack: below for hack-a-thon and mini-lab requirements -->
-<!-- need to adjust Templates to start -->
 
 <!-- Hack: Build form to drive bit size dynamic updates
            use HTML Input Form in Frontend, ie toward top of Page
            send initial value and updated values to form via Python render_template -->
 <!-- Hack: use 8 as default -->
-{#{% set BITS = 8 %}#}
+{% set BITS = bits %}
 {% set MAX = ((2 ** BITS) - 1) %}
 
 <!-- Hack: Set bulbs and pass as variables via Python render_template
            add new images (ie PNGs) to project -->
 <!-- use your PNGs as default -->
-{% set imgBulbOn = "/static/assets/bulb_on.gif" %}
-{% set imgBulbOff = "/static/assets/bulb_off.png" %}
+{% set imgBulbOn = "/static/assets/openbook.jpg" %}
+{% set imgBulbOff = "/static/assets/closedbook.jpg" %}
 {% set msgTurnOn = "Turn On" %}
 {% set msgTurnOff = "Turn Off" %}
 
@@ -41,7 +40,7 @@
             // DOM assignment to Decimal conversion
             document.getElementById('decimal').innerHTML = parseInt(binary, 2).toString(10);
             /* Hack: show ASCII printable character(s) for each 8 bits
-             DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asp
+             DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asplook
              below ASCII for more ideas of where to make changes
              */
         }
@@ -114,8 +113,15 @@
     </script>
 {% endblock %}
 
-{% block content %}
+{% block body %}
     <h1 class="text-center">Binary Math with Conversions</h1>
+
+    <form action="/binary" id="bits" method="POST" >
+        <label for="bits">Enter Bit Size</label>
+        <input name="bits">
+        <input type="submit" value="Go!">
+    </form>
+
     <div class="container">
         <div class="row justify-content-md-center">
 
@@ -127,7 +133,6 @@
                         <th>Octal</th>
                         <th>Hexadecimal</th>
                         <th>Decimal</th>
-                        <th>ASCII</th>
                         <!-- Hack: display ASCII label for printable character(s)  -->
                         <th>Minus</th>
                     </tr>
@@ -137,8 +142,6 @@
                         <td id="octal">0</td>
                         <td id="hexadecimal">0</td>
                         <td id="decimal">0</td>
-                        <td id="ASCII">null</td>
-                        <td id="RGB">null</td>
                         <!-- Hack: display ASCII printable character(s)  -->
                         <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
 
@@ -165,4 +168,7 @@
 
         </div>
     </div>
+{% endblock %}
+
+{% block background %}
 {% endblock %}
