--- a/templates/binary.html
+++ b/templates/binary.html
@@ -13,8 +13,8 @@
 <!-- Hack: Set bulbs and pass as variables via Python render_template
            add new images (ie PNGs) to project -->
 <!-- use your PNGs as default -->
-{% set imgBulbOn = "/static/assets/openbook.jpg" %}
-{% set imgBulbOff = "/static/assets/closedbook.jpg" %}
+{% set imgBulbOn = "/static/assets/bulb_on.png" %}
+{% set imgBulbOff = "/static/assets/bulb_off.png" %}
 {% set msgTurnOn = "Turn On" %}
 {% set msgTurnOff = "Turn Off" %}
 
@@ -43,6 +43,8 @@
              DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asplook
              below ASCII for more ideas of where to make changes
              */
+            let text = String.fromCharCode(parseInt(parseInt(binary, 2).toString(10)));
+            document.getElementById('ascii').innerHTML = text;
         }
 
         // algorithm to convert decimal to base using division and remainder
@@ -119,7 +121,7 @@
     <form action="/binary" id="bits" method="POST" >
         <label for="bits">Enter Bit Size</label>
         <input name="bits">
-        <input type="submit" value="Go!">
+        <input type="submit" value="Submit">
     </form>
 
     <div class="container">
@@ -134,6 +136,8 @@
                         <th>Hexadecimal</th>
                         <th>Decimal</th>
                         <!-- Hack: display ASCII label for printable character(s)  -->
+                        <th>ASCII</th>
+
                         <th>Minus</th>
                     </tr>
                     <tr>
@@ -143,6 +147,7 @@
                         <td id="hexadecimal">0</td>
                         <td id="decimal">0</td>
                         <!-- Hack: display ASCII printable character(s)  -->
+                        <td id="ascii">0</td>
                         <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
 
                     </tr>
