--- a/templates/binary.html
+++ b/templates/binary.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 {% extends "layouts/base.html" %}
 
-<!-- Search for all the Hack: below for hack-a-thon and mini-lab requirements -->
+{% block background %}
+{% endblock %}
+{% set project = "binary" %}
 
-<!-- Hack: Build form to drive bit size dynamic updates
-           use HTML Input Form in Frontend, ie toward top of Page
-           send initial value and updated values to form via Python render_template -->
-<!-- Hack: use 8 as default -->
+<!-- Search for all the Hack: below for hack-a-thon and mini-lab requirements -->
+<!-- need to adjust Templates to start -->
+
+DONE<!-- Hack: Build form to drive bit size dynamic updates
+use HTML Input Form in Frontend, ie toward top of Page
+send initial value and updated values to form via Python render_template -->
+DONE<!-- Hack: use 8 as default
+Change to an input box-->
+
+
 {% set BITS = bits %}
 {% set MAX = ((2 ** BITS) - 1) %}
 
-<!-- Hack: Set bulbs and pass as variables via Python render_template
-           add new images (ie PNGs) to project -->
+DONE <!-- Hack: Set bulbs and pass as variables via Python render_template
+add new images (ie PNGs) to project -->
 <!-- use your PNGs as default -->
 {% set imgBulbOn = "/static/assets/bulb_on.png" %}
 {% set imgBulbOff = "/static/assets/bulb_off.png" %}
 {% set msgTurnOn = "Turn On" %}
 {% set msgTurnOff = "Turn Off" %}
 
-{% block meta %}
+{% block body %}
     <title>Binary page</title>
     <script>
         const BITS = '{{ BITS }}'; let max = '{{ MAX }}'; let MAX = parseInt(max, 10);
@@ -33,31 +41,30 @@
         // setter for DOM values
         function setConversions(binary) {
             document.getElementById('binary').innerHTML = binary;
-            // DOM assignment to Octal conversion
+// DOM assignment to Octal conversion
             document.getElementById('octal').innerHTML = parseInt(binary, 2).toString(8);
-            // DOM assignment to Hexadecimal conversion
+// DOM assignment to Hexadecimal conversion
             document.getElementById('hexadecimal').innerHTML = parseInt(binary, 2).toString(16);
-            // DOM assignment to Decimal conversion
+// DOM assignment to Decimal conversion
             document.getElementById('decimal').innerHTML = parseInt(binary, 2).toString(10);
             /* Hack: show ASCII printable character(s) for each 8 bits
-             DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asplook
-             below ASCII for more ideas of where to make changes
-             */
-            let text = String.fromCharCode(parseInt(parseInt(binary, 2).toString(10)));
-            document.getElementById('ascii').innerHTML = text;
+            DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asp
+            below ASCII for more ideas of where to make changes
+            */
+            document.getElementById('ascii').innerHTML = parseInt(binary, 2).toString();
         }
 
         // algorithm to convert decimal to base using division and remainder
         function decimal_2_base(decimal, base) {
             let conversion = "";
-            // loop to convert to base
+// loop to convert to base
             do {
                 let digit = decimal % base;
                 conversion = "" + digit + conversion; // what does this do?
-                decimal = ~~(decimal / base);         // what does this do?  what is ~~?
-            } while (decimal > 0);                  // why while at the end?
-            // loop to pad with zeros
-            if (base === 2) {                        // only pad for binary conversions
+                decimal = ~~(decimal / base); // what does this do? what is ~~?
+            } while (decimal > 0); // why while at the end?
+// loop to pad with zeros
+            if (base === 2) { // only pad for binary conversions
                 for (let i = 0; conversion.length < BITS; i++) {
                     conversion = "0" + conversion;
                 }
@@ -67,11 +74,11 @@
 
         // toggle selected bit and recalculate
         function toggleBit(i) {
-            //alert("Digit action: " + i );
+//alert("Digit action: " + i );
             const dig = document.getElementById('digit' + i);
             const image = document.getElementById('bulb' + i);
             const butt = document.getElementById('butt' + i);
-            // Change digit and visual
+// Change digit and visual
             if (image.src.match("{{ imgBulbOn }}")) {
                 dig.value = 0;
                 image.src = "{{ imgBulbOff }}";
@@ -81,25 +88,25 @@
                 image.src = "{{ imgBulbOn }}";
                 butt.innerHTML = "{{ msgTurnOff }}";
             }
-            // Binary numbers
+// Binary numbers
             const binary = getBits();
             setConversions(binary);
         }
         // add is positive integer, subtract is negative integer
         function add(n) {
             let binary = getBits();
-            // convert to decimal and do math
+// convert to decimal and do math
             let decimal = parseInt(binary, 2);
-            if (n > 0) {  // PLUS
+            if (n > 0) { // PLUS
                 decimal = MAX === decimal ? 0 : decimal += n; // OVERFLOW or PLUS
-            } else  {     // MINUS
+            } else { // MINUS
                 decimal = 0 === decimal ? MAX : decimal += n; // OVERFLOW or MINUS
             }
-            // convert the result back to binary
+// convert the result back to binary
             binary = decimal_2_base(decimal, 2);
-            // update conversions
+// update conversions
             setConversions(binary);
-            // update bits
+// update bits
             for (let i = 0; i < binary.length; i++) {
                 let digit = binary.substr(i, 1);
                 document.getElementById('digit' + i).value = digit;
@@ -113,20 +120,17 @@
             }
         }
     </script>
-{% endblock %}
 
-{% block body %}
     <h1 class="text-center">Binary Math with Conversions</h1>
-
     <form action="/binary" id="bits" method="POST" >
         <label for="bits">Enter Bit Size</label>
         <input name="bits">
-        <input type="submit" value="Submit">
+        <input type="submit" value="Go!">
     </form>
 
     <div class="container">
         <div class="row justify-content-md-center">
-
+            <!-- Table on page -->
             <div class="col-8">
                 <table class="table">
                     <tr id="table">
@@ -135,9 +139,8 @@
                         <th>Octal</th>
                         <th>Hexadecimal</th>
                         <th>Decimal</th>
-                        <!-- Hack: display ASCII label for printable character(s)  -->
-                        <th>ASCII</th>
-
+                        <th>Ascii</th>
+                        <!-- Hack: display ASCII label for printable character(s) -->
                         <th>Minus</th>
                     </tr>
                     <tr>
@@ -146,10 +149,9 @@
                         <td id="octal">0</td>
                         <td id="hexadecimal">0</td>
                         <td id="decimal">0</td>
-                        <!-- Hack: display ASCII printable character(s)  -->
                         <td id="ascii">0</td>
+                        <!-- Hack: display ASCII printable character(s) -->
                         <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
-
                     </tr>
                 </table>
             </div>
@@ -157,6 +159,7 @@
             <div class="col-12">
                 <table class="table">
                     <tr>
+                        <!-- for loop -->
                         {% for i in range(BITS) %}
                             <td><img class="img-responsive py-3" id="bulb{{i}}" src="{{ imgBulbOff }}" alt="" width="40" height="Auto">
                                 <button type="button" id="butt{{i}}" onclick="toggleBit('{{i}}')">{{ msgTurnOn }}</button>
@@ -165,7 +168,7 @@
                     </tr>
                     <tr>
                         {% for i in range(BITS) %}
-                            <td><input type='text' id='digit{{i}}' Value="0" size="1" readonly></td>
+                            <td><label for='digit{{i}}'></label><input type='text' id='digit{{i}}' Value="0" size="2" readonly></td>
                         {% endfor %}
                     </tr>
                 </table>
@@ -173,7 +176,19 @@
 
         </div>
     </div>
-{% endblock %}
 
-{% block background %}
+    <html>
+    <head>
+        <style>
+            body {
+                background-color: yellowgreen;
+            }
+        </style>
+    </head>
+    <body>
+
+
+    </body>
+    </html>
+
 {% endblock %}
