RGB Project (change 1.0)

--- a/templates/grid.html
+++ b/templates/grid.html
@@ -119,6 +119,12 @@
         <div class="col-sm" style="font-size:30px;">
             <a href="/week3">Week 3 Video</a>
         </div>
+        <div class="col-sm" style="font-size:30px;">
+            <a href="/rgb">RGB Binary</a>
+        </div>
+        <div class="col-sm" style="font-size:30px;">
+            <a href=""></a>
+        </div>
     {% endblock %}
 </div>
 </html>
