--- a/templates/minilabs.html
+++ b/templates/minilabs.html
@@ -10,7 +10,7 @@
             <title>Minilabs</title>
             <style>
                 body {
-                    background: #a2cf9f;
+                    background: rosybrown;
                 }
 
                 .sneaky {
@@ -47,22 +47,23 @@
         }
 
         #customers td {
-            height: 1000px;
+            height: 341px;
             width: 341px;
 
 
 
         }
+        #customers tr{
+            background-color: #f2f2f2;
+        }
 
-        #customers tr:nth-child(even){background-color: #f2f2f2;}
-
-        #customers tr:hover {background-color: #5aa158;}
+        #customers tr:hover {background-color: rgb(255, 232, 214);}
 
         #customers th {
             padding-top: 12px;
             padding-bottom: 12px;
             text-align: left;
-            background-color: #04AA6D;
+            background-color: rgb(255, 229, 217);
             color: white;
         }
     </style>
@@ -78,8 +79,8 @@
         </tr>
         <tr>
             <td><h5>Brainwrite</h5>
-                <p><iframe src="https://docs.google.com/document/d/e/2PACX-1vTMv65vFhRI4cV4guFx-wNaa4h4DtmTIX7Q3f8ZIhJHDWXNBc-lq52o9XNcyAlX2uGFzfGgYm6FbdZt/pub?embedded=true" style="height: 1000px; width: 341px;">
-                <p><iframe src="https://docs.google.com/document/d/e/2PACX-1vTMv65vFhRI4cV4guFx-wNaa4h4DtmTIX7Q3f8ZIhJHDWXNBc-lq52o9XNcyAlX2uGFzfGgYm6FbdZt/pub?embedded=true" style="height: 1000px; width: 341px;">
+                <p><iframe src="https://docs.google.com/document/d/e/2PACX-1vTMv65vFhRI4cV4guFx-wNaa4h4DtmTIX7Q3f8ZIhJHDWXNBc-lq52o9XNcyAlX2uGFzfGgYm6FbdZt/pub?embedded=true" style="height: 320px; width: 450px;">
+                <p><iframe src="https://docs.google.com/document/d/e/2PACX-1vTMv65vFhRI4cV4guFx-wNaa4h4DtmTIX7Q3f8ZIhJHDWXNBc-lq52o9XNcyAlX2uGFzfGgYm6FbdZt/pub?embedded=true" style="height: 320px; width: 450px;">
 
                 </iframe>
                 </p>
@@ -87,15 +88,13 @@
             <td>
                 <h5>TPT 3</h5>
                 <p>Bria and Riya Notes:
-                    <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vSbmTrt7xooVOz4h3BAmaAlxBWGtSzVA-5v7imjbpahEL3Rc-hratmHPbgEqk9mY8tyf2A6svB7T8j5/pub?embedded=true" style="height: 1000px; width: 341px;"></iframe>
-                    <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vSbmTrt7xooVOz4h3BAmaAlxBWGtSzVA-5v7imjbpahEL3Rc-hratmHPbgEqk9mY8tyf2A6svB7T8j5/pub?embedded=true" style="height: 1000px; width: 341px;"></iframe>
+                    <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vSbmTrt7xooVOz4h3BAmaAlxBWGtSzVA-5v7imjbpahEL3Rc-hratmHPbgEqk9mY8tyf2A6svB7T8j5/pub?embedded=true" style="height: 320px; width: 450x;"></iframe>
                     <br>Sreeja and Valerie Notes:
-                    <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vRgcZNbe9sQyeiPsYqwrzWnK1bhED-aJqZkTkTLPh0h-BfdHC9Y6mVE2UTUEx7MVw7VTChv0K08h6rU/pub?embedded=true" style="height: 1000px; width: 341px;"></iframe>
-                    <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vRgcZNbe9sQyeiPsYqwrzWnK1bhED-aJqZkTkTLPh0h-BfdHC9Y6mVE2UTUEx7MVw7VTChv0K08h6rU/pub?embedded=true" style="height: 1000px; width: 341px;"></iframe>
+                    <br> <iframe src="https://docs.google.com/document/d/e/2PACX-1vRgcZNbe9sQyeiPsYqwrzWnK1bhED-aJqZkTkTLPh0h-BfdHC9Y6mVE2UTUEx7MVw7VTChv0K08h6rU/pub?embedded=true" style="height: 320px; width: 450px;"></iframe>
                 </p>
             </td>
             <td>Wireframes
-                <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+                <div style="position: relative; width: 450px; height: 0; padding-top: 56.2500%;
  padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
                     <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
@@ -131,11 +130,9 @@
         <tr>
             <td>
                 <h5>Journal 1 w/ Bria, Riya, and Valerie</h5>
-                <p><iframe width="341" height="480" src="https://www.youtube.com/embed/kJKbsoaUph4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-                <p><iframe width="341" height="480" src="https://www.youtube.com/embed/kJKbsoaUph4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                <p><iframe width="450" height="320" src="https://www.youtube.com/embed/kJKbsoaUph4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
                 <h5>Journal 1 w/ Sreeja</h5>
-                <p><iframe src="https://drive.google.com/file/d/1Uf12yLFhXtC_HFMGwKqBH7PbBZqHDk0P/preview" width="341" height="480" allow="autoplay"></iframe></p>
-                <p><iframe src="https://drive.google.com/file/d/1Uf12yLFhXtC_HFMGwKqBH7PbBZqHDk0P/preview" width="341" height="480" allow="autoplay"></iframe></p>
+                <p><iframe src="https://drive.google.com/file/d/1Uf12yLFhXtC_HFMGwKqBH7PbBZqHDk0P/preview" width="450" height="320" allow="autoplay"></iframe></p>
             </td>
             <td></td>
             <td></td>
