Changes to Minilabs

--- a/templates/insights.html
+++ b/templates/insights.html
@@ -45,6 +45,9 @@
     <a href="https://youtu.be/UPD-ODdUVYg" >
         <button type="button" class="btn btn-info">Video/Journal 0</button>
     </a>
+    <a href="http://127.0.0.1:5000/binary" >
+        <button type="button" class="btn btn-info">Binary</button>
+    </a>
 
     </div>
             </body>
