Youtube playlist button on home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <!-- Setting up variables to customize "project" details to be specific to index page -->
 {% set project = "The Hackermen" %}
 {% set overview = "https://github.com/Reinhardtlotter/flask_portfolio" %}
+{% set repo = "https://drive.google.com/drive/u/1/my-drive" %}
 
 {% block background %}
 
