--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -144,7 +144,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             <div class="col-3">
                 <a href="{{ overview }}" class="btn">GITHUB</a>
             </div>
-
+                        <div class="col-3">
+                            <a href="{{ repo }}" class="btn" style = "position:relative; left:-30px; top:-10px">Test</a>
+                        </div>
             {% endblock %}
         </div>
 
