added immage gallery line in game

--- a/templates/game/easy.html
+++ b/templates/game/easy.html
@@ -7,6 +7,31 @@
         <meta charset="UTF-8">
         <title>Title</title>
     </head>
+    <style>
+        .button {
+            background-color: rosybrown; /* Green */
+            border: none;
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+            margin: 4px 2px;
+            cursor: pointer;
+            transition-duration: 0.2s;
+        }
+
+        .button1 {padding: 14px 40px; width: 32%}
+        .button2 {padding: 14px 40px; width: 34%}
+        .button3 {padding: 14px 40px; width: 32%}
+
+        .button:hover {
+            background-color: white;
+            color: black;
+        }
+
+    </style>
+    <a class="button button1" href=""> Start!</a>
     <body>
 
     </body>
