--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -21,18 +21,17 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('walruses') }}>Walruses</a>
             <a class="nav-link" href={{ url_for('game') }}>Game</a>
             <!-- stub is shown using the name of the route -->
-            <a class="nav-link" href="/stub">Greet</a>
-            <a class="nav-link" href="/minilabs">Minilabs</a>
-            <a class="nav-link" href="/binary">Binary</a>
+            <a class="nav-link" href="/stub">Stub</a>
+            <a class="nav-link" href="/minilabs">Minilabs!</a>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href={{ url_for('aboutus') }} data-bs-toggle="dropdown" aria-expanded="false" id="dropdownMenuButton1" type="button">
                     About us!
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <a class="dropdown-item" href="/bria">Bria</a>
-                    <a class="dropdown-item" href="/riya">Riya</a>
-                    <a class="dropdown-item" href="/valerie">Valerie</a>
-                    <a class="dropdown-item" href="/sreeja">Sreeja</a>
+                    <a class="dropdown-item" href="#">Bria</a>
+                    <a class="dropdown-item" href="#">Riya</a>
+                    <a class="dropdown-item" href="#">Sreeja</a>
+                    <a class="dropdown-item" href="#">Valerie</a>
                 </div>
             </li>
         </div>
