--- a/templates/valerie.html
+++ b/templates/valerie.html
@@ -5,23 +5,57 @@
 {% block body %}
 <head>
     <meta charset="UTF-8">
-    <title>about valerie</title>
+    <title>Title</title>
 </head>
 <body>
-    <p>
-        <div id="hoverText">
-            <span title="This was on purpose, to be funny. I hope it worked.">Hi, my name is Valerie, and I'm a positive_adjectives[random.randint(len(positive_adjectives)] learner and worker!</span>
-        </div>
-    </p>
-    <p>
-        I'm in AP Computer Science Principles, which hopefully you're aware of as my teacher.
-    </p>
-    <p>
-        When I'm older, I want to work with the Computer.
-    </p>
-    <p>
-        I hope this About Me page sated your hunger for technical innovation.
-    </p>
+<div class="w3-container w3-sand">
+    <style>
+        h2 {text-align: center;}
+        h3 {text-align: center;}
+        ul {text-align: center;}
+        p {text-align: center;}
+        div {text-align: center;}
+    </style>
+    <h2 style="color: #cc0000">
+        <img src="/static/assets/fire.gif" height="40" width="200"/>
+        ATTENTION: NOW ENTERING <b>THE VALERIE ZONE!!!!!</b>
+        <img src="/static/assets/fire.gif" height="40" width="200"/></h2>
+    <img src="/static/assets/valerie.png" height="500" width="200"/>
+    <img src="/static/assets/valerie.png" height="500" width="200"/>
+    <img src="/static/assets/valerie.png" height="500" width="200"/>
+    <img src="/static/assets/valerie.png" height="500" width="200"/>
+    <img src="/static/assets/valerie.png" height="500" width="200"/>
+    <img src="/static/assets/valerie.png" height="500" width="200"/>
+    <img src="/static/assets/valerie.png" height="500" width="200"/>
+    <img src="/static/assets/valerie.png" height="500" width="200"/>
+    <img src="/static/assets/valerie.png" height="500" width="200"/>
+
+    <p style="font-family:Arial">haha yeah i know how to use copy and paste Im so cool</p>
+
+    <p style="font-family:Arial">hello my name is valerie but you can call me val</p>
+    <p style="font-family:Arial">as you can see by my copious overuse of it above, i have exactly <b>one</b> photo of me i actually like</p>
+    <style>
+        div {text-align: left;}
+    </style>
+    <h1 style="color: blue">check out this big cat <img src="/static/assets/fire.gif" height="100" width="300"/></h1>
+    <img src="/static/assets/floppa.jpeg" height="400" width="1000">
+
+    <h3><b>about me:</b> </h3>
+    <ul>
+        <li>i am 15 years old</li>
+        <li>i use she/they but if youre upset at me they/them is fine</li>
+        <li>EECS at uc berkeley is my dream college path</li>
+        <li>i want to do computer engineering for a living</li>
+        <li>i am quite politically engaged</li>
+        <li>i have gazed into the void for so long that its abyssal image is permanently etched into my retinas</li>
+        <li>i love chocolate milk</li>
+        <li>can you remind me to buy some chocolate milk later thanks</li>
+        <li>i also love caracal cats</li>
+        <li>you dont need to remind me that caracals are illegal to own in america</li>
+    </ul>
+</div>
+
+
 </body>
 {% endblock %}
 
