--- a/templates/game.html
+++ b/templates/game.html
@@ -21,6 +21,84 @@
     <title>W3.CSS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <html>
+        <head>
+            <style>
+                div.gallery {
+                    margin: 5px;
+                    border: 1px solid #ccc;
+                    float: left;
+                    width: 180px;
+                }
+
+                div.gallery:hover {
+                    border: 1px solid #777;
+                }
+
+                div.gallery img {
+                    width: 100%;
+                    height: auto;
+                }
+
+                div.desc {
+                    padding: 15px;
+                    text-align: center;
+                }
+            </style>
+        </head>
+    <body>
+
+    <div class="gallery">
+        <a target="_blank" href="/static/assets/tayloralbum.jpg">
+            <img src="/static/assets/tayloralbum.jpg" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="/static/assets/harryalbum.jpg">
+            <img src="/static/assets/harryalbum.jpg" alt="Forest" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="/static/assets/paris.jpg">
+            <img src="/static/assets/paris.jpg" alt="Northern Lights" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="/static/assets/download.jpg">
+            <img src="/static/assets/download.jpg" alt="Mountains" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="/static/assets/billiealbum.jpg">
+            <img src="/static/assets/billiealbum.jpg" alt="Mountains" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="/static/assets/duaalbum.jpg">
+            <img src="/static/assets/duaalbum.jpg" alt="Mountains" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="/static/assets/bcbc.jpg">
+            <img src="/static/assets/bcbc.jpg" alt="Mountains" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+    </div>
+
+    </body>
+    </html>
 
     </head>
     <body>
