--- a/templates/bria.html
+++ b/templates/bria.html
@@ -6,7 +6,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
-
 </head>
 
 <body>
@@ -18,6 +17,7 @@
 
 </p>
 <img id="myImage" src="/static/assets/bria's%20pic.png" height="640" width="480">
+<img id="friends" src="/static/assets/"
 
 
 <script>
